--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,20 @@
-body{
-  border: 1px solid black;
+.container{
+border: 2px dotted green;
+text-align:center;
+background-color:#fffcf2;
+max-width:100%;
+height:100%;
+}
+
+.para{
+border: 0.5px solid black;
+font-size:40px;
+background-color:white;
+margin:30px;
+}
+.hero-img{
+  max-width:200px;
+  height:200px;
+  opacity:0.5;
+  margin:10px;
 }
